--- a/forkafest.html
+++ b/forkafest.html
@@ -67,11 +67,11 @@
     <!-- slider -->
 
     <section class="about" style="background-color: #f8f8f8 !important;">
-      <div class="container-fluid" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
+      <div class="container-fluid"
+        style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
         <div class="row" style="width: 90%; padding: 10px;">
-        <div class="col-md-6">
-          <h1  class="forkafest">Forkafest 2023</h1>
-          
+          <div class="col-md-6">
+            <h1 class="forkafest">Forkafest 2023</h1>
             <p id="peace" class="countdown"></p>
             <ul class="jam">
               <li>Hari</li>
@@ -79,11 +79,21 @@
               <li>Menit</li>
               <li>Detik</li>
             </ul>
-            <p class="forkafest-sub">"Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi era society 5.0"</p>
-        </div>
-        <div class="col-md-6" style="padding: 0 50px;text-align: center;">
-          <img src="assets/img/forkafest.svg" alt="forkafest" class="img-fluid" >
-        </div>
+                          <p class="forkafest-sub">"Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi
+                            era society 5.0"</p>
+          <div style="text-align: start; margin-top: 20px;">
+            <button class="cta">
+              <span>Daftar!</span>
+              <svg viewBox="0 0 13 10" height="10px" width="15px">
+                <path d="M1,5 L11,5"></path>
+                <polyline points="8 1 12 5 8 9"></polyline>
+              </svg>
+            </button>
+          </div>
+          </div>
+          <div class="col-md-6" style="padding: 0 50px;text-align: center;">
+            <img src="assets/img/forkafest.svg" alt="forkafest" class="img-fluid">
+          </div>
         </div>
       </div>
     </section>
