--- a/forkafest.html
+++ b/forkafest.html
@@ -69,7 +69,7 @@
     <section class="about" style="background-color: #f8f8f8 !important;">
       <div class="container-fluid"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
-        <div class="row" style="width: 90%; padding: 10px;">
+        <div class="row" style="width: 90%; padding: 10px; min-height: 100% !important;">
           <div class="col-md-6">
             <h1 class="forkafest">Forkafest 2023</h1>
             <p id="peace" class="countdown"></p>
@@ -79,20 +79,20 @@
               <li>Menit</li>
               <li>Detik</li>
             </ul>
-                          <p class="forkafest-sub">"Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi
-                            era society 5.0"</p>
-          <div style="text-align: start; margin-top: 20px;">
-            <button class="cta">
-              <span>Daftar!</span>
-              <svg viewBox="0 0 13 10" height="10px" width="15px">
-                <path d="M1,5 L11,5"></path>
-                <polyline points="8 1 12 5 8 9"></polyline>
-              </svg>
-            </button>
+            <p class="forkafest-sub">"Meningkatkan kreativitas generasi muda dengan teknologi digital dalam menghadapi
+              era society 5.0"</p>
+            <div style="text-align: center; margin-top: 50px;">
+              <button class="cta">
+                <span>Daftar!</span>
+                <svg viewBox="0 0 13 10" height="10px" width="15px">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline>
+                </svg>
+              </button>
+            </div>
           </div>
-          </div>
-          <div class="col-md-6" style="padding: 0 50px;text-align: center;">
-            <img src="assets/img/forkafest.svg" alt="forkafest" class="img-fluid">
+          <div class="col-md-6" style="text-align: center; ">
+            <img src="assets/img/forkafest.svg" alt="forkafest" class="img-fluid" style="width: 100%; height: 100%;">
           </div>
         </div>
       </div>
